sonar metric stuff